Add configure.ac for Autotools build system
- Added configure.ac with Autoconf configuration
- Updated Makefile.am for standalone build (not FreeSWITCH integrated)
- Support for FreeSWITCH library detection via pkg-config or --with-freeswitch flag
- Proper Automake variables for module building

--- a/mod_logfile_domain/Makefile.am
+++ b/mod_logfile_domain/Makefile.am
@@ -1,18 +1,18 @@
-include $(top_srcdir)/build/modmake.rulesam
-MODNAME=mod_logfile_domain
+ACLOCAL_AMFLAGS = -I m4
+
+if BUILD_MODDIR
+moddir = $(MODDIR)
+else
+moddir = $(libdir)/freeswitch/mod
+endif
+
+AM_CPPFLAGS = $(FREESWITCH_CFLAGS)
 
 mod_LTLIBRARIES = mod_logfile_domain.la
 mod_logfile_domain_la_SOURCES  = mod_logfile_domain.c
-mod_logfile_domain_la_CFLAGS   = $(AM_CFLAGS)
-mod_logfile_domain_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
+mod_logfile_domain_la_CFLAGS   = $(AM_CFLAGS) $(FREESWITCH_CFLAGS)
+mod_logfile_domain_la_LIBADD   = $(FREESWITCH_LIBS)
 mod_logfile_domain_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
-
-$(MODULE_OBJECT): $(MODULE_SOURCE)
-	$(CC) $(CFLAGS) -I$(FREESWITCH_INCLUDE) -c $(MODULE_SOURCE) -o $(MODULE_OBJECT)
-
-$(MODULE_TARGET): $(MODULE_OBJECT)
-	$(CC) -shared $(MODULE_OBJECT) -o $(MODULE_TARGET) $(LDFLAGS)
-	@echo "Module built successfully: $(MODULE_TARGET)"
 
 install: $(MODULE_TARGET)
 	@echo "Installing $(MODULE_TARGET) to $(INSTALL_MOD_PATH)"
