Fix Autotools configuration for proper building
- Added AC_CONFIG_MACRO_DIRS([m4]) for libtool macro directory
- Replaced obsolete AC_PROG_LIBTOOL with LT_INIT([disable-static])
- Added AC_PROG_AR for archiver detection
- Removed problematic BUILD_MODDIR conditional
- Simplified Makefile.am to remove custom install target
- Added conf_DATA for configuration file installation
- Fixed automake warnings about POSIX archiver

--- a/mod_logfile_domain/Makefile.am
+++ b/mod_logfile_domain/Makefile.am
@@ -1,10 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
 
-if BUILD_MODDIR
-moddir = $(MODDIR)
-else
 moddir = $(libdir)/freeswitch/mod
-endif
+confdir = $(sysconfdir)/freeswitch/autoload_configs
 
 AM_CPPFLAGS = $(FREESWITCH_CFLAGS)
 
@@ -14,16 +11,5 @@ mod_logfile_domain_la_CFLAGS   = $(AM_CFLAGS) $(FREESWITCH_CFLAGS)
 mod_logfile_domain_la_LIBADD   = $(FREESWITCH_LIBS)
 mod_logfile_domain_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
 
-install: $(MODULE_TARGET)
-	@echo "Installing $(MODULE_TARGET) to $(INSTALL_MOD_PATH)"
-	mkdir -p $(INSTALL_MOD_PATH)
-	cp $(MODULE_TARGET) $(INSTALL_MOD_PATH)/
-	@echo "Installing modules.conf.xml to $(INSTALL_CONF_PATH)"
-	mkdir -p $(INSTALL_CONF_PATH)
-	cp modules.conf.xml $(INSTALL_CONF_PATH)/mod_$(MODULE_NAME).conf.xml
-	@echo "Installation complete!"
-
-cmake-build:
-	mkdir -p build
-	cd build && cmake .. && make
+conf_DATA = conf/autoload_configs/logfile_domain.conf.xml
 	@echo "CMake build complete! Output in build/lib/"
