Production-ready Autotools configuration
- Simplified configure.ac with AM_PROG_AR instead of AC_PROG_AR
- Removed subdir-objects flag for better compatibility
- Streamlined FreeSWITCH detection with fallback
- Cleaned up Makefile.am with essential rules only
- Added EXTRA_DIST for proper packaging
- Removed config.h generation (not needed)
- Ready for autoreconf -i without errors

--- a/mod_logfile_domain/Makefile.am
+++ b/mod_logfile_domain/Makefile.am
@@ -3,13 +3,13 @@ ACLOCAL_AMFLAGS = -I m4
 moddir = $(libdir)/freeswitch/mod
 confdir = $(sysconfdir)/freeswitch/autoload_configs
 
-AM_CPPFLAGS = $(FREESWITCH_CFLAGS)
-
 mod_LTLIBRARIES = mod_logfile_domain.la
-mod_logfile_domain_la_SOURCES  = mod_logfile_domain.c
-mod_logfile_domain_la_CFLAGS   = $(AM_CFLAGS) $(FREESWITCH_CFLAGS)
-mod_logfile_domain_la_LIBADD   = $(FREESWITCH_LIBS)
-mod_logfile_domain_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
+
+mod_logfile_domain_la_SOURCES = mod_logfile_domain.c
+mod_logfile_domain_la_CFLAGS = $(FREESWITCH_CFLAGS)
+mod_logfile_domain_la_LIBADD = $(FREESWITCH_LIBS)
+mod_logfile_domain_la_LDFLAGS = -avoid-version -module -no-undefined -shared
 
 conf_DATA = conf/autoload_configs/logfile_domain.conf.xml
-	@echo "CMake build complete! Output in build/lib/"
+
+EXTRA_DIST = conf/autoload_configs/logfile_domain.conf.xml
